# OpenMP

./: !Важно!.txt  main.cpp
untitled6/: CMakeLists.txt
